Переписал докер файл для сборки более мелкого образа